# user_lifecycle_states

./: .gitignore  README.md  pyproject.toml  run.sh
data_generation/: generate_data.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/: dim_customers.sql  dim_products.sql  dim_users.sql  fct_orders.sql  fct_transactions.sql  mart_user_state_monthly.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql  stg_transactions.sql  stg_users.sql
dlt_pipeline/: __init__.py  extract.py
dlt_pipeline/.dlt/: config.toml  secrets.toml
evidence_dashboard/pages/: customers.md  index.md  orders.md  products.md
evidence_dashboard/sources/jaffle_shop/: connection.yaml  customers.sql  orders.sql  products.sql
evidence_dashboard/sources/user_analytics/: connection.yaml  transactions.sql  user_states_monthly.sql  users.sql
localdatastack/: __init__.py  run.py
semantic_layer/: README.md  app.py  mcp_server.py  semantic_model.py  semantic_models.yml
user_analytics/: run.py
